# mvl-spec

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: publish-lsp.yml  publish-nvim.yml  publish-pygments.yml  publish-tree-sitter.yml  publish-vscode.yml  publish-zed.yml  release-spec.yml  semantics-build.yml
editors/nvim/: CHANGELOG.md  README.md  install.sh
editors/nvim/after/ftplugin/: mvl.lua
editors/nvim/lua/mvl/: health.lua  init.lua  lsp.lua
editors/nvim/plugin/: mvl.lua
editors/nvim/queries/mvl/: highlights.scm  indents.scm
editors/vscode/: CHANGELOG.md  README.md  extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: mvl.tmLanguage.json
editors/zed/: CHANGELOG.md  Cargo.toml  README.md  extension.toml
editors/zed/languages/mvl/: config.toml  highlights.scm  indents.scm
editors/zed/src/: lib.rs
grammar/: grammar.ebnf  keywords.yaml
reference/: README.md
semantics/: .gitignore  Makefile  README.md  mvl.ott
semantics/tests/: examples.v
tools/: check-versions.py
tools/generators/: README.md
tools/lsp/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
tools/lsp/mvl_lsp/: server.py
tools/lsp/tests/: test_smoke.py
tools/pygments/: README.md
tools/tree-sitter/: .gitignore  README.md  grammar.js
tools/tree-sitter/src/: grammar.json  node-types.json  parser.c
