[project]
name = "mvl-lsp"
version = "0.1.0"
description = "MVL Language Server — Phase 1 (tree-sitter diagnostics)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "MVL Team", email = "mvl-lang@schubergphilis.com" }]
requires-python = ">=3.10"
keywords = ["mvl", "language-server", "lsp", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "pygls>=1.3",
    "tree-sitter>=0.22",
    # The MVL tree-sitter binding is published separately from
    # mvl-lang/mvl-spec/tools/tree-sitter as `tree-sitter-mvl` on PyPI.
    # Add this once that package is published; until then users install
    # the tree-sitter binding manually from source.
    # "tree-sitter-mvl>=0.1",
]

[project.scripts]
mvl-lsp = "mvl_lsp.server:main"

[project.urls]
Homepage = "https://mvl-lang.org"
Repository = "https://github.com/mvl-lang/mvl-spec"
Issues = "https://github.com/mvl-lang/mvl-spec/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mvl_lsp*"]
