[project]
name = "mvl-lsp"
version = "0.1.0"
description = "MVL Language Server — Phase 1 (tree-sitter diagnostics)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "MVL Team", email = "mvl-lang@schubergphilis.com" }]
requires-python = ">=3.10"
keywords = ["mvl", "language-server", "lsp", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "pygls>=2.0,<3",
    "tree-sitter>=0.22",
    # The MVL tree-sitter grammar lives at mvl-lang/tree-sitter-mvl and
    # is installed by git URL — not from PyPI. See issue #36 for the
    # rationale (pre-1.0 MVL, grammar co-evolves with the language,
    # editor extensions pin the same way in editors/zed/extension.toml).
    "tree-sitter-mvl @ git+https://github.com/mvl-lang/tree-sitter-mvl@994821d4c936a487854ac4ae60b14a0400bdc000",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
mvl-lsp = "mvl_lsp.server:main"

[project.urls]
Homepage = "https://mvl-lang.org"
Repository = "https://github.com/mvl-lang/mvl-spec"
Issues = "https://github.com/mvl-lang/mvl-spec/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mvl_lsp*"]
