[project]
name = "mvl-lsp"
version = "0.1.2"
description = "MVL Language Server — compiler-backed diagnostics via `mvl check --stdin --format=json`"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "MVL Team", email = "mvl-lang@schubergphilis.com" }]
requires-python = ">=3.10"
keywords = ["mvl", "language-server", "lsp", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "pygls>=2.0,<3",
]
# Runtime requirement: the `mvl` compiler binary must be on PATH, or
# MVL_BIN must point at it. `mvl-lsp` shells out to
# `mvl check --stdin --format=json` for every diagnostic pass.

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
mvl-lsp = "mvl_lsp.server:main"

[project.urls]
Homepage = "https://mvl-lang.org"
Repository = "https://github.com/mvl-lang/mvl-spec"
Issues = "https://github.com/mvl-lang/mvl-spec/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mvl_lsp*"]
